--- a/README
+++ b/README
@@ -7,3 +7,8 @@ Dependencies:
 - jQuery
 - modenizr
 - util.js
+
+This plugin depends on features in EcmaScript 5. 
+If you need to support a browser that does not off ES5 support, 
+it will be necessary to include a library like es5-shim 
+(https://github.com/kriskowal/es5-shim) on the page
